src/codegen/llvm/tests/snapshots/cdec__codegen__llvm__tests__init__init_struct_with_bitfield.snap
---
source: src/codegen/llvm/tests/init.rs
expression: codegen.module.to_string()
---
; ModuleID = '<string>'
source_filename = "<string>"
target triple = "x86_64-pc-linux-gnu"

@a = global { i16 } { i16 401 }

define i32 @main() {
entry:
  %a = alloca i32, align 4
  %0 = load i32, ptr %a, align 4
  %1 = load i32, ptr %a, align 4
  %2 = add i32 %1, 1
  %3 = load i32, ptr %a, align 4
  %4 = add i32 %3, 2
  %and = and i32 %0, 7
  %shl = shl i32 %and, 0
  %or = or i16 0, i32 %shl
  %and1 = and i32 %2, 15
  %shl2 = shl i32 %and1, 3
  %or3 = or i16 %or, i32 %shl2
  %and4 = and i32 %4, 31
  %shl5 = shl i32 %and4, 7
  %or6 = or i16 %or3, i32 %shl5
  %5 = insertvalue { i16 } zeroinitializer, i16 %or6, 0
  %b = alloca { i16 }, align 8
  store { i16 } %5, ptr %b, align 2
  ret i32 0
}
