src/codegen/llvm/tests/snapshots/cdec__codegen__llvm__tests__init__init_union_with_bitfield.snap
---
source: src/codegen/llvm/tests/init.rs
expression: codegen.module.to_string()
---
; ModuleID = '<string>'
source_filename = "<string>"
target triple = "x86_64-pc-linux-gnu"

@a = global [3 x { i32 }] { { i32 } { i32 1 }, { i32 } { i32 2 }, { i32 } { i32 3 } }

define i32 @main() {
entry:
  %a = alloca i32, align 4
  %0 = load i32, ptr %a, align 4
  %1 = insertvalue { i32 } zeroinitializer, i32 %0, 0
  %b = alloca { i32 }, align 8
  store { i32 } %1, ptr %b, align 4
  ret i32 0
}
